Fixed navbar on mobile

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -73,6 +73,10 @@ body {
   }
 }
 
+.button-group > .logout-icon {
+  display: none;
+}
+
 .user-icon {
   font-size: 22px;
   background-color: $blue;
@@ -536,7 +540,7 @@ body {
     margin: 0;
     height: 100vh;
     display: grid;
-    grid-template-rows: 10% auto;
+    grid-template-rows: 8% auto;
     grid-template-columns: 100%;
     grid-column-gap: 0;
     grid-row-gap: 20px;
@@ -552,7 +556,7 @@ body {
   .main-content {
     grid-row: 2;
     grid-column: 1;
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -563,6 +567,10 @@ body {
       border-radius: 10px;
       margin-bottom: 20px;
     }
+  }
+
+  .inner-content > .blob {
+    max-width: 780px;
   }
 
   .side-content {
@@ -578,23 +586,7 @@ body {
       max-width: 200px;
     }
   }
-}
-
-.menu {
-  font-family: "Roboto" sans-serif;
-  text-decoration: none;
-  color: $red;
-  text-align: center;
-  padding: 10px 0;
-  display: none;
-}
-input[type=checkbox]{
-  display: none;
-}
-input[type=checkbox]:checked ~ .navbar{
-  display: block;
-  background-color: rgba(255, 255, 255, 0.9);
-}
+}         
 
 @media (max-width:768px) {
 
@@ -623,10 +615,28 @@ input[type=checkbox]:checked ~ .navbar{
     margin: 100px;
     
   }
+  
+  .inner-content > .blob {
+    max-width: 580px;
+  }
 
   .side-content {
     display: none;
   }
+
+  .logo-text {
+    display: none
+  }
+
+  .button-group {
+    > .logout-icon {
+      display: block;
+    }
+
+    > .dropdown-nav {
+      display: none;
+    }
+  } 
 
 }
 
